tests/baselines/reference/functionCall10.errors.txt
tests/cases/compiler/functionCall10.ts(3,5): error TS2345: Argument of type '"foo"' is not assignable to parameter of type '数字'.
tests/cases/compiler/functionCall10.ts(5,8): error TS2345: Argument of type '"bar"' is not assignable to parameter of type '数字'.


==== tests/cases/compiler/functionCall10.ts (2 errors) ====
    function foo(...a:number[]){};
    foo(0, 1); 
    foo('foo'); 
        ~~~~~
!!! error TS2345: Argument of type '"foo"' is not assignable to parameter of type '数字'.
    foo();
    foo(1, 'bar');
           ~~~~~
!!! error TS2345: Argument of type '"bar"' is not assignable to parameter of type '数字'.
    